css/main.css
html {
  box-sizing: border-box;
  background-color: #f0eee8;
  font-family: georgia;
}

*, *::before, *::after {
  box-sizing: inherit;
}

h1 {
  color: #512200;
  font-family: 'Dosis', sans-serif;
  font-weight: bold;
  font-size: 1.5rem
}

p {
  font-size: 1rem;
  color: #512200;
}

body {
  background-color: #cabdb2;
  border: 3px solid #785439;
  border-radius: 3px;
}

dl {
  list-style-type: none;
  font-size: 0.875rem;
  color: #512200;
}

.btn {
  text-decoration: none;
  font-size: 1.125rem;
  color: white;
  text-align: center;
  font-family: 'Dosis', sans-serif;
  display: inline-block;
  padding: 7px;
  border-radius: 8px;
  background-color: #785439;
}

div {
  text-align: center;
}

